--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header class="header">
         <div class="header__logo">
-            <img src="/imagenes/logo_restaurante.png" alt="logo Resturante class="header__logo--imagen">
+            <img src="/Imagen/header/logo_restaurante.png" alt="logo Resturante class="header__logo--imagen">
         </div>
 
         <nav class="header__navegador">
@@ -44,8 +44,86 @@
         </div>
     </section>
 
+<!-- popular menu -->
 
+<section class="menu__contenedor">
 
+    
+    <div>
+        <h1 class="menu__contenedor--titulo">Popular Menu</h1>
+        <p class="menu__contenedor--texto">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita
+          doloremque reprehenderit placeat natus. Culpa, illum officia
+          doloremque ad odio consectetur a consequuntur veniam quo, provident
+          expedita esse similique voluptates ducimus.
+        </p>
+      </div>
+
+      <div class="menu__contenedor-imagenes-circulares">
+        <div class="menu__item">
+          <img
+            src="/Imagen/iconos menu/Imagen-1.png"
+            alt="Plato 1"
+            class="menu__item--imagenes"
+          />
+          <h1 class="menu__item--titulo">Title Here</h1>
+          <p class="menu__item--texto">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+
+        <div class="menu__item">
+          <img
+            src="/Imagen/iconos menu/Imagen-2.png"
+            alt="Plato 2"
+            class="menu__item--imagenes"
+          />
+          <h1 class="menu__item--titulo">Title Here</h1>
+          <p class="menu__item--texto">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+
+        <div class="menu__item">
+          <img
+            src="/Imagen/iconos menu/Imagen-3.png"
+            alt="Plato 3"
+            class="menu__item--imagenes"
+          />
+          <h1 class="menu__item--titulo">Title Here</h1>
+          <p class="menu__item--texto">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+    </div>
+    
+    <div class="menu__contenedor--imagenes">
+        <img
+            src="/Imagen/iconos menu/Puntos-superior-izquierda.png"
+            class="menu__contenedor--imagen--puntos-superior-izquierda"
+        />
+        <img
+            src="/Imagen/iconos menu/Circulo-superior-derecha.png"
+            class="menu__contenedor--imagen--circulo-superior-derecha"
+        />
+        <img
+            src="/Imagen/iconos menu/linia-zicza-superior-izquierda.png"
+            class="menu__contenedor--imagen--linia-zicza-izquierda"
+        />
+        <img
+            src="/Imagen/iconos menu/Circulo-izquierdo-inferior.png"
+            class="menu__contenedor--imagen--circulo-inferior-izquierda"
+        />
+        <img
+            src="/Imagen/iconos menu/Puntos-medio-izquierda.png"
+            class="menu__contenedor--imagen--puntos-medio-derecha"
+        />
+        <img
+            src="/Imagen/iconos menu/linea-zicza-inferior-derecha.png"
+            class="menu__contenedor--imagen--linea-zicza-derecha"
+        />
+    </div>
+</section>
 
 </body>
 </html>
