--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       <div class="menu__contenedor-imagenes-circulares">
         <div class="menu__item">
           <img
-            src="/Imagen/iconos menu/Imagen-1.png"
-            alt="Plato 1"
-            class="menu__item--imagenes"
+            src="/Imagen/iconos menu/Imagen-1.png" alt="Plato 1" class="menu__item--imagenes"
           />
           <h1 class="menu__item--titulo">Title Here</h1>
           <p class="menu__item--texto">
@@ -74,9 +72,7 @@
 
         <div class="menu__item">
           <img
-            src="/Imagen/iconos menu/Imagen-2.png"
-            alt="Plato 2"
-            class="menu__item--imagenes"
+            src="/Imagen/iconos menu/Imagen-2.png" alt="Plato 2" class="menu__item--imagenes"
           />
           <h1 class="menu__item--titulo">Title Here</h1>
           <p class="menu__item--texto">
@@ -86,9 +82,7 @@
 
         <div class="menu__item">
           <img
-            src="/Imagen/iconos menu/Imagen-3.png"
-            alt="Plato 3"
-            class="menu__item--imagenes"
+            src="/Imagen/iconos menu/Imagen-3.png" alt="Plato 3" class="menu__item--imagenes"
           />
           <h1 class="menu__item--titulo">Title Here</h1>
           <p class="menu__item--texto">
@@ -99,31 +93,68 @@
     
     <div class="menu__contenedor--imagenes">
         <img
-            src="/Imagen/iconos menu/Puntos-superior-izquierda.png"
-            class="menu__contenedor--imagen--puntos-superior-izquierda"
+            src="/Imagen/iconos menu/Puntos-superior-izquierda.png" class="menu__contenedor--imagen--puntos-superior-izquierda"
         />
         <img
-            src="/Imagen/iconos menu/Circulo-superior-derecha.png"
-            class="menu__contenedor--imagen--circulo-superior-derecha"
+            src="/Imagen/iconos menu/Circulo-superior-derecha.png" class="menu__contenedor--imagen--circulo-superior-derecha"
         />
         <img
-            src="/Imagen/iconos menu/linia-zicza-superior-izquierda.png"
-            class="menu__contenedor--imagen--linia-zicza-izquierda"
+            src="/Imagen/iconos menu/linia-zicza-superior-izquierda.png" class="menu__contenedor--imagen--linia-zicza-izquierda"
         />
         <img
-            src="/Imagen/iconos menu/Circulo-izquierdo-inferior.png"
-            class="menu__contenedor--imagen--circulo-inferior-izquierda"
+            src="/Imagen/iconos menu/Circulo-izquierdo-inferior.png" class="menu__contenedor--imagen--circulo-inferior-izquierda"
         />
         <img
-            src="/Imagen/iconos menu/Puntos-medio-izquierda.png"
-            class="menu__contenedor--imagen--puntos-medio-derecha"
+            src="/Imagen/iconos menu/Puntos-medio-izquierda.png" class="menu__contenedor--imagen--puntos-medio-derecha"
         />
         <img
-            src="/Imagen/iconos menu/linea-zicza-inferior-derecha.png"
-            class="menu__contenedor--imagen--linea-zicza-derecha"
+            src="/Imagen/iconos menu/linea-zicza-inferior-derecha.png" class="menu__contenedor--imagen--linea-zicza-derecha"
         />
     </div>
 </section>
+
+<!-- segundo anuncio -->
+
+    <section class="segundo-anuncio">
+
+        <div class="primera-informacion__imagenes">
+            <img
+              src="/Imagen/anuncio 2/Puntos-superior-derecha.png" class="segundo-anuncio__imagen--puntos-superior-derecha"
+            />
+            <img
+              src="/Imagen/anuncio 2/linea zicza-Centro.png" class="segundo-anuncio__imagen--linea-zicza-centro"
+            />
+            <img
+              src="/Imagen/anuncio 2/Circulo-Inferior-derecha.png" class="segundo-anuncio__imagen--circulo-inferior-derecha"
+            />
+            <img
+              src="/Imagen/anuncio 2/Puntos-Inferior-Izquierda.png" class="segundo-anuncio__imagen--puntos-inferior-izquierda"
+            />
+            <img
+              src="/Imagen/anuncio 2/Circulo-derecha--imagen.png" class="segundo-anuncio__imagen--circulo-izquierdo"
+            />
+        </div>
+
+        <div class="segundo-anuncio__contenedor">
+            <div class="segundo-anuncio__contenedor--imagen">
+              <img
+                src="/Imagen/anuncio 2/imagen_sushi.png" class="segundo-anuncio-circular"
+              />
+            </div>
+    
+            <div class="segundo-anuncio__contenedor--contenido">
+              <h1 class="segundo-anuncio__contenedor--titulo">Title Here</h1>
+              <p class="segundo-anuncio__contenedor--descripcion">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                lacinia odio vitae vestibulum vestibulum.
+              </p>
+              <button class="botones__general segundo-anuncio__contenedor--boton">ORDER NOW</button>
+            </div>
+        </div>
+    </section>
+
+
+
 
 </body>
 </html>
