--- a/index.html
+++ b/index.html
@@ -254,10 +254,24 @@
           </div>
     </section>
 
+    <section class="comentario">
+        <div class="comentario__detalle">
+          <img
+            src="/Imagen/comentario/Foto__perfil.png" class="comentario__imagen--perfil"
+          />
+  
+          <p class="comentario__texto">
+            If you are a culinary fan, if you like to spend time in your kitchen,
+            you likely find yourself looking for reliable resources through which
+            you can
+          </p>
+  
+          <p class="comentario__nombre">Phoebe Frazier</p>
+        </div>
+      </section>
 
 
 
 
-    
 </body>
 </html>
