--- a/index.html
+++ b/index.html
@@ -316,7 +316,62 @@
         />
       </section>
   
+<!-- footer -->
 
+      <footer class="footer">
+        <div class="footer__informacion">
+          <h3 class="footer__titulo">Title Here</h3>
+          <p class="footer__texto">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at
+            dignissim nunc, id maximus ex. Etiam nec dignissim elit, at dignissim
+            enim.
+          </p>
+  
+          <div class="footer__redes">
+            <a href="#" class="footer__link"
+              ><img
+                class="footer__social" src="/Imagen/footer/Instagram.png" alt="Instagram"
+            /></a>
+            <a href="#" class="footer__link"
+              ><img
+                class="footer__social" src="/Imagen/footer/Facebook.png" alt="Facebook"
+            /></a>
+            <a href="#" class="footer__link"
+              ><img
+                class="footer__social" src="/Imagen/footer/Twitter.png" alt="Twitter"
+            /></a>
+            <a href="#" class="footer__link"
+              ><img
+                class="footer__social" src="/Imagen/footer/WhatsApp.png" alt="WhatsApp"
+            /></a>
+          </div>
+        </div>
+
+        <div class="footer__informacion">
+          <h3 class="footer__titulo">About</h3>
+          <a href="#" class="footer__link--texto">History</a>
+          <a href="#" class="footer__link--texto">Our Team</a>
+          <a href="#" class="footer__link--texto">Brand Guidelines</a>
+          <a href="#" class="footer__link--texto">Terms & Condition</a>
+          <a href="#" class="footer__link--texto">Privacy Policy</a>
+        </div>
+  
+        <div class="footer__informacion">
+          <h3 class="footer__titulo">Services</h3>
+          <a href="#" class="footer__link--texto">How to Order</a>
+          <a href="#" class="footer__link--texto">Our Product</a>
+          <a href="#" class="footer__link--texto">Order Status</a>
+          <a href="#" class="footer__link--texto">Promo</a>
+          <a href="#" class="footer__link--texto">Payment Method</a>
+        </div>
+  
+        <div class="footer__informacion">
+          <h3 class="footer__titulo">Other</h3>
+          <a href="#" class="footer__link--texto">Contact Us</a>
+          <a href="#" class="footer__link--texto">Help</a>
+          <a href="#" class="footer__link--texto">Privacy</a>
+        </div>
+      </footer>
 
 </body>
 </html>
