--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resturante Sushi</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -18,7 +18,7 @@
 
     <header class="header">
         <div class="header__logo">
-            <img src="../Imagen/header/logo_restaurante.png" alt="logo Resturante class="header__logo--imagen">
+            <img src="../Imagen/header/logo_restaurante.png" alt="logo Resturante" class="header__logo--imagen">
         </div>
 
         <nav class="header__navegador">
