--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="menu__contenedor-imagenes-circulares">
         <div class="menu__item">
           <img
-            src="../Imagen/iconos menu/Imagen-1.png" alt="Plato 1" class="menu__item--imagenes"
+            src="../Restaurante-sushi/Imagen/iconos menu/Imagen-1.png" alt="Plato 1" class="menu__item--imagenes"
           />
           <h1 class="menu__item--titulo">Title Here</h1>
           <p class="menu__item--texto">
